* Fixed admin script processing hook * Fixed general settings not showing as updated when first updated * Fixed a link from appearing when no albums were found in a gallery * Fixed a problem with single quotes being escaped when displayed in album titles in admin * Added support for skipping video albums from being displayed in a gallery * Added a button to add videos from admin video display page * Fixed album and video counting bug * Added ability to set starting resolution of videos * Added setting to set the color of the player progress bar * Added better security to plugin
git-svn-id: https://plugins.svn.wordpress.org/utubevideo-gallery/trunk@708085 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/admin_style.css
+++ b/css/admin_style.css
@@ -68,10 +68,6 @@
 	padding: 0!important;
 }
 
-.utFormBox .utLoneNav{
-	margin: 0!important;
-}
-
 .utBlock{
 	display: block;
 }
